# xinchao

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install-prerequisites.sh
crates/xinchao/: Cargo.toml
crates/xinchao-gui/: Cargo.toml
crates/xinchao-gui/src/: app.rs  main.rs  ops.rs  theme.rs
crates/xinchao-gui/src/views/: diagnostics.rs  enroll.rs  manage.rs  mod.rs  unlock.rs
crates/xinchao/src/: config.rs  error.rs  lib.rs  main.rs  store.rs  unlock_daemon.rs
crates/xinchao/src/auth/: mod.rs  session.rs  verify.rs
crates/xinchao/src/capture/: camera.rs  emitter.rs  mod.rs  uvc.rs
crates/xinchao/src/pam/: conf.rs  mod.rs
crates/xinchao/src/recognition/: detect.rs  embed.rs  mod.rs  models.rs  recognize.rs
docs/: HANDS_FREE_UNLOCK.md  INSTALL.md
packaging/: xinchao.desktop  xinchao.toml
packaging/pam.d/: README.md  sudo.example
packaging/systemd/: xinchao-ir-emitter.service  xinchao-unlockd@.service
