[workspace]
members = ["crates/xinchao", "crates/xinchao-gui"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Quang Trung Ta <taquangtrungvn@gmail.com>"]
repository = "https://github.com/taquangtrungvn/xinchao"
description = "Windows Hello-style IR facial authentication for Linux via PAM"

[workspace.dependencies]
xinchao = { path = "crates/xinchao", version = "0.1.0" }
thiserror = "2"
