[package]
name = "xinchao-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native egui GUI for xinchao enrollment and management"

[[bin]]
name = "xinchao-gui"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
xinchao.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
